Folder cleanup and main class update for native